--- a/index.html
+++ b/index.html
@@ -71,6 +71,41 @@
     <p style="color: aliceblue;">javascript</p>
     </div>
     </li>
+    <li class="recommendation">
+      <img style="border-radius:20px;"src="script.png" alt="next video" height="100" width="200">
+      <div>
+        <h3>javascript</h3>
+      <p style="color: aliceblue;">javascript</p>
+      </div>
+      </li>
+      <li class="recommendation">
+        <img style="border-radius:20px;"src="script.png" alt="next video" height="100" width="200">
+        <div>
+          <h3>javascript</h3>
+        <p style="color: aliceblue;">javascript</p>
+        </div>
+        </li>
+        <li class="recommendation">
+          <img style="border-radius:20px;"src="script.png" alt="next video" height="100" width="200">
+          <div>
+            <h3>javascript</h3>
+          <p style="color: aliceblue;">javascript</p>
+          </div>
+          </li>
+          <li class="recommendation">
+            <img style="border-radius:20px;"src="script.png" alt="next video" height="100" width="200">
+            <div>
+              <h3>javascript</h3>
+            <p style="color: aliceblue;">javascript</p>
+            </div>
+            </li>
+            <li class="recommendation">
+              <img style="border-radius:20px;"src="script.png" alt="next video" height="100" width="200">
+              <div>
+                <h3>javascript</h3>
+              <p style="color: aliceblue;">javascript</p>
+              </div>
+              </li>
     
          
     </ul>
